--- a/vForum/Controller/Feed/CommentFeed/CommentFeedTableViewCell/FeedCommentTableViewCell.xib
+++ b/vForum/Controller/Feed/CommentFeed/CommentFeedTableViewCell/FeedCommentTableViewCell.xib
@@ -10,30 +10,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="609" id="KGk-i7-Jjw" customClass="FeedHomeTableViewCell" customModule="vForum" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="419" height="609"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="77" id="KGk-i7-Jjw" customClass="FeedCommentTableViewCell" customModule="vForum" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="360" height="77"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="419" height="609"/>
+                <rect key="frame" x="0.0" y="0.0" width="360" height="77"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JVq-4P-KoA" customClass="ReuseFeedCard" customModule="vForum" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="419" height="609"/>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tMG-AK-1lx" customClass="ReuseFeedComment" customModule="vForum" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="11" width="291" height="83"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     </view>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="JVq-4P-KoA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8vg-S6-JuG"/>
-                    <constraint firstAttribute="trailing" secondItem="JVq-4P-KoA" secondAttribute="trailing" id="9SX-Aa-eeQ"/>
-                    <constraint firstItem="JVq-4P-KoA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="iP1-L8-aT6"/>
-                    <constraint firstAttribute="bottom" secondItem="JVq-4P-KoA" secondAttribute="bottom" id="nEY-Vj-ALo"/>
-                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <connections>
-                <outlet property="reuseFeedCardView" destination="JVq-4P-KoA" id="b0O-Hu-VXV"/>
-            </connections>
-            <point key="canvasLocation" x="26.811594202898554" y="209.93303571428569"/>
+            <point key="canvasLocation" x="166.66666666666669" y="58.59375"/>
         </tableViewCell>
     </objects>
 </document>
