--- a/vForum/View/ReusableView/FeedCard/ReuseFeedCard.xib
+++ b/vForum/View/ReusableView/FeedCard/ReuseFeedCard.xib
@@ -8,14 +8,27 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ReuseFeedCard" customModule="vForum" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ReuseFeedCard" customModule="vForum" customModuleProvider="target">
+            <connections>
+                <outlet property="btnComment" destination="L76-Qh-sez" id="wHA-Nk-lnL"/>
+                <outlet property="btnMore" destination="nuv-oJ-mIA" id="gik-iA-TKM"/>
+                <outlet property="collectionviewImage" destination="7Xk-ga-1k0" id="Sqg-2o-iMM"/>
+                <outlet property="imageAvatar" destination="KkB-fx-JMG" id="dRR-mo-CIF"/>
+                <outlet property="imageLiked" destination="3cZ-jI-llN" id="SX4-kW-5ct"/>
+                <outlet property="lblCommentCount" destination="prK-7l-gBD" id="goV-da-D5a"/>
+                <outlet property="lblContent" destination="V1t-P8-vzm" id="9Gg-hy-WMr"/>
+                <outlet property="lblLikeCount" destination="rk5-a0-LZF" id="9Ha-vx-Khc"/>
+                <outlet property="lblTimeCreate" destination="IfX-Ie-dfd" id="0ww-7d-SKD"/>
+                <outlet property="lblUsername" destination="ibU-Nv-NYh" id="Cjt-vY-qd0"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="610"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="599"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo2" translatesAutoresizingMaskIntoConstraints="NO" id="KkB-fx-JMG">
-                    <rect key="frame" x="20" y="0.0" width="50" height="50"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="KkB-fx-JMG">
+                    <rect key="frame" x="20" y="7" width="50" height="42"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibU-Nv-NYh">
@@ -62,29 +75,35 @@
                     <color key="currentPageIndicatorTintColor" red="0.85882352939999995" green="0.85098039219999999" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
                 </pageControl>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jfN-B5-4sY">
-                    <rect key="frame" x="0.0" y="616" width="414" height="5"/>
+                    <rect key="frame" x="0.0" y="594" width="414" height="5"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3cZ-jI-llN">
-                    <rect key="frame" x="60" y="517" width="46" height="46"/>
+                    <rect key="frame" x="60" y="513" width="46" height="46"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" image="like"/>
+                    <connections>
+                        <action selector="LIKEFEED:" destination="-1" eventType="touchUpInside" id="FSw-oZ-pev"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1.234 likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rk5-a0-LZF">
-                    <rect key="frame" x="48" y="571" width="70" height="19"/>
+                    <rect key="frame" x="48" y="560" width="70" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L76-Qh-sez">
-                    <rect key="frame" x="302" y="522" width="46" height="46"/>
+                    <rect key="frame" x="302" y="518" width="46" height="46"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" image="comment"/>
+                    <connections>
+                        <action selector="COMMENTFEED:" destination="-1" eventType="touchUpInside" id="iin-ek-INO"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="12 comments" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="prK-7l-gBD">
-                    <rect key="frame" x="284" y="576" width="83" height="17"/>
+                    <rect key="frame" x="284" y="561" width="83" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
                     <nil key="textColor"/>
@@ -94,13 +113,13 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="-346.37681159420293" y="-54.241071428571423"/>
+            <point key="canvasLocation" x="-346.37681159420293" y="-57.924107142857139"/>
         </view>
     </objects>
     <resources>
+        <image name="avatar" width="512" height="512"/>
         <image name="comment" width="96" height="96"/>
         <image name="like" width="96" height="96"/>
-        <image name="logo2" width="256" height="256"/>
         <image name="menu_detail" width="24" height="24"/>
     </resources>
 </document>
