--- a/vForum/View/ReusableView/FeedComment/ReuseFeedComment.xib
+++ b/vForum/View/ReusableView/FeedComment/ReuseFeedComment.xib
@@ -18,49 +18,39 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="374" height="64"/>
+            <rect key="frame" x="0.0" y="0.0" width="811" height="591"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2PX-Ld-0el">
-                    <rect key="frame" x="65" y="0.0" width="79" height="24"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" fixedFrame="YES" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2PX-Ld-0el">
+                    <rect key="frame" x="527" y="0.0" width="79" height="24"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="18"/>
                     <color key="textColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1m ago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UKW-Re-ofe">
-                    <rect key="frame" x="154" y="5" width="42.5" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1m ago" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UKW-Re-ofe">
+                    <rect key="frame" x="616" y="5" width="42.5" height="16"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swn-Fk-Tg3">
-                    <rect key="frame" x="65" y="29" width="71" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Content...Content... Content...Content..." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swn-Fk-Tg3">
+                    <rect key="frame" x="527" y="29" width="284" height="52"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="tn7-fk-eOo">
-                    <rect key="frame" x="5" y="5" width="50" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="50" id="0H4-Q8-Xca"/>
-                        <constraint firstAttribute="width" secondItem="tn7-fk-eOo" secondAttribute="height" multiplier="1:1" id="jRI-6u-oU8"/>
-                    </constraints>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="tn7-fk-eOo">
+                    <rect key="frame" x="5" y="5" width="512" height="512"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-            <constraints>
-                <constraint firstItem="tn7-fk-eOo" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="KOe-Iz-lAP"/>
-                <constraint firstItem="swn-Fk-Tg3" firstAttribute="leading" secondItem="2PX-Ld-0el" secondAttribute="leading" id="P76-Eb-aqd"/>
-                <constraint firstItem="2PX-Ld-0el" firstAttribute="leading" secondItem="tn7-fk-eOo" secondAttribute="trailing" constant="10" id="Q5E-tj-HeZ"/>
-                <constraint firstItem="tn7-fk-eOo" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="5" id="S9E-TP-GzX"/>
-                <constraint firstItem="UKW-Re-ofe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="Y6G-ZD-IIZ"/>
-                <constraint firstItem="UKW-Re-ofe" firstAttribute="leading" secondItem="2PX-Ld-0el" secondAttribute="trailing" constant="10" id="b0X-U7-9VY"/>
-                <constraint firstItem="2PX-Ld-0el" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="cHC-Ds-9G7"/>
-                <constraint firstItem="swn-Fk-Tg3" firstAttribute="top" secondItem="2PX-Ld-0el" secondAttribute="bottom" constant="5" id="qdo-hZ-EVf"/>
-            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="-176.81159420289856" y="-55.580357142857139"/>
+            <point key="canvasLocation" x="139.85507246376812" y="120.87053571428571"/>
         </view>
     </objects>
     <resources>
