--- a/vForum/Controller/Feed/CommentFeed/FeedCommentViewController.xib
+++ b/vForum/Controller/Feed/CommentFeed/FeedCommentViewController.xib
@@ -14,6 +14,7 @@
                 <outlet property="tableViewCmts" destination="1tM-jq-fso" id="284-vY-dh1"/>
                 <outlet property="txtviewAddCmt" destination="0Qb-Gu-lex" id="wlN-Na-Wi9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="viewContain" destination="p2d-Ah-EAd" id="AHB-wl-3xb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -26,26 +27,33 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </tableView>
-                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cJ3-dx-Ln8">
-                    <rect key="frame" x="20" y="747" width="374.5" height="69"/>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p2d-Ah-EAd">
+                    <rect key="frame" x="0.0" y="712" width="414" height="108"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" text="Type something..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0Qb-Gu-lex">
-                            <rect key="frame" x="0.0" y="0.0" width="346" height="69"/>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Type something..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0Qb-Gu-lex">
+                            <rect key="frame" x="8" y="30" width="346" height="69"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                             <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZUq-4d-IPj">
-                            <rect key="frame" x="354" y="0.0" width="20.5" height="69"/>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZUq-4d-IPj">
+                            <rect key="frame" x="350" y="42" width="26" height="25"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <state key="normal" image="paperplane" catalog="system"/>
+                            <size key="titleShadowOffset" width="1" height="1"/>
+                            <state key="normal" image="paperplane" catalog="system">
+                                <color key="titleShadowColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </state>
                             <connections>
                                 <action selector="ADDCOMMENT:" destination="-1" eventType="touchUpInside" id="dcS-q5-jZ1"/>
                             </connections>
                         </button>
                     </subviews>
-                </stackView>
+                </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
