--- a/vForum/Controller/Feed/DetailFeed/FeedDetailViewController.xib
+++ b/vForum/Controller/Feed/DetailFeed/FeedDetailViewController.xib
@@ -12,8 +12,10 @@
             <connections>
                 <outlet property="btnShowAllCmt" destination="IeM-T8-DKa" id="S4L-6u-eno"/>
                 <outlet property="reuseFeedCardDetail" destination="xP6-Je-Tvr" id="gKQ-zd-Jcn"/>
+                <outlet property="scrollView" destination="xsF-Vo-oSb" id="SCy-qP-P8M"/>
                 <outlet property="tableViewSomeComments" destination="5DQ-sH-fQZ" id="sju-vc-Pcg"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="viewContain" destination="SR1-Yh-4dD" id="FVA-ue-bxk"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,12 +23,12 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xsF-Vo-oSb">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xsF-Vo-oSb">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SR1-Yh-4dD">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SR1-Yh-4dD">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xP6-Je-Tvr" customClass="ReuseFeedCard" customModule="vForum" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="599"/>
@@ -53,17 +55,19 @@
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         </view>
                     </subviews>
+                    <constraints>
+                        <constraint firstItem="SR1-Yh-4dD" firstAttribute="width" secondItem="wmN-9i-yhc" secondAttribute="width" id="LzT-bj-Asq"/>
+                        <constraint firstItem="SR1-Yh-4dD" firstAttribute="leading" secondItem="i7a-Ie-BmF" secondAttribute="leading" id="PQl-uy-yW7"/>
+                        <constraint firstItem="SR1-Yh-4dD" firstAttribute="trailing" secondItem="i7a-Ie-BmF" secondAttribute="trailing" id="RbF-ji-dWs"/>
+                        <constraint firstItem="SR1-Yh-4dD" firstAttribute="bottom" secondItem="i7a-Ie-BmF" secondAttribute="bottom" id="Zja-Zv-7Vw"/>
+                        <constraint firstItem="SR1-Yh-4dD" firstAttribute="top" secondItem="i7a-Ie-BmF" secondAttribute="top" id="cUh-td-94F"/>
+                        <constraint firstItem="SR1-Yh-4dD" firstAttribute="height" secondItem="wmN-9i-yhc" secondAttribute="height" priority="250" id="jBU-La-JHf"/>
+                    </constraints>
                     <viewLayoutGuide key="contentLayoutGuide" id="i7a-Ie-BmF"/>
                     <viewLayoutGuide key="frameLayoutGuide" id="wmN-9i-yhc"/>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-            <constraints>
-                <constraint firstAttribute="bottom" secondItem="xsF-Vo-oSb" secondAttribute="bottom" id="CkA-we-03R"/>
-                <constraint firstItem="xsF-Vo-oSb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="XBU-4v-R39"/>
-                <constraint firstItem="xsF-Vo-oSb" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="YIg-w5-pz0"/>
-                <constraint firstItem="xsF-Vo-oSb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="nmo-zJ-DlD"/>
-            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="198.21428571428569"/>
         </view>
