--- a/vForum/Controller/Feed/DetailFeed/FeedDetailTableCell/FeedDetailTableViewCell.xib
+++ b/vForum/Controller/Feed/DetailFeed/FeedDetailTableCell/FeedDetailTableViewCell.xib
@@ -10,25 +10,30 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="73" id="KGk-i7-Jjw" customClass="FeedDetailTableViewCell" customModule="vForum" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="331" height="73"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="141" id="KGk-i7-Jjw" customClass="FeedDetailTableViewCell" customModule="vForum" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="331" height="141"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="331" height="73"/>
+                <rect key="frame" x="0.0" y="0.0" width="331" height="141"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DMI-WI-lOx" customClass="ReuseFeedComment" customModule="vForum" customModuleProvider="target">
-                        <rect key="frame" x="40" y="0.0" width="240" height="62"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DMI-WI-lOx" customClass="ReuseFeedComment" customModule="vForum" customModuleProvider="target">
+                        <rect key="frame" x="10" y="0.0" width="311" height="131"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     </view>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="DMI-WI-lOx" secondAttribute="bottom" constant="10" id="Hce-F9-H4Y"/>
+                    <constraint firstItem="DMI-WI-lOx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Kpv-JN-dpO"/>
+                    <constraint firstAttribute="trailing" secondItem="DMI-WI-lOx" secondAttribute="trailing" constant="10" id="aal-WV-jcq"/>
+                    <constraint firstItem="DMI-WI-lOx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="fS0-h1-MsJ"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="reuseComment" destination="DMI-WI-lOx" id="fys-pq-Diq"/>
             </connections>
-            <point key="canvasLocation" x="145.6521739130435" y="98.102678571428569"/>
+            <point key="canvasLocation" x="145.6521739130435" y="120.87053571428571"/>
         </tableViewCell>
     </objects>
 </document>
