--- a/vForum/Controller/Feed/DetailFeed/FeedDetailTableCell/FeedDetailTableViewCell.xib
+++ b/vForum/Controller/Feed/DetailFeed/FeedDetailTableCell/FeedDetailTableViewCell.xib
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="141" id="KGk-i7-Jjw" customClass="FeedDetailTableViewCell" customModule="vForum" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="331" height="141"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="117" id="KGk-i7-Jjw" customClass="FeedDetailTableViewCell" customModule="vForum" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="331" height="117"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="331" height="141"/>
+                <rect key="frame" x="0.0" y="0.0" width="331" height="117"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DMI-WI-lOx" customClass="ReuseFeedComment" customModule="vForum" customModuleProvider="target">
-                        <rect key="frame" x="10" y="0.0" width="311" height="131"/>
+                        <rect key="frame" x="10" y="0.0" width="311" height="107"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     </view>
                 </subviews>
@@ -29,11 +28,10 @@
                     <constraint firstItem="DMI-WI-lOx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="fS0-h1-MsJ"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="reuseComment" destination="DMI-WI-lOx" id="fys-pq-Diq"/>
             </connections>
-            <point key="canvasLocation" x="145.6521739130435" y="120.87053571428571"/>
+            <point key="canvasLocation" x="145.6521739130435" y="112.83482142857142"/>
         </tableViewCell>
     </objects>
 </document>
