--- a/vForum/View/Forum/ForumGroupView.xib
+++ b/vForum/View/Forum/ForumGroupView.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForumGroupController" customModule="vForum" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForumTopicController" customModule="vForum" customModuleProvider="target">
             <connections>
                 <outlet property="TopicList" destination="cTS-h4-Y4x" id="jbG-v6-6Pn"/>
                 <outlet property="view" destination="6yQ-Pq-PUk" id="Ylq-1Z-I5C"/>
